# own-garmin

./: .dockerignore  .env.example  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: spec-implementer.md
docs/: ADR-garmin-lakehouse.md  architecture.md
docs/adrs/: ADR-001-garmin-lakehouse.md  ADR-002-in-house-client.md  ADR-003-expanding-scope.md
plans/: 02-garmin-lakehouse-cloud.md  03-garmin-lakehouse-wellness.md  garmin-lakehouse-cloud.md  garmin-lakehouse-plan.md
plans/tasks/: 01-project-scaffold.md  02-paths-config.md  03-client-session.md  04-bronze-activities.md  05-silver-activities.md  06-query-duckdb.md  07-cli.md  08-tests-silver-impl.md  08-tests-silver.md  09-e2e-verification.md  10-remote-mfa-verification.md  11-storage-abstraction.md  12-bronze-s3-migration.md  13-silver-s3-migration.md  14-query-s3-support.md  15-containerization.md  16-minio-e2e.md  17-client-wellness-endpoints.md  18-bronze-wellness-recovery.md  19-bronze-daily-physiology.md  20-bronze-composition-activity.md  21-silver-wellness-daily.md  22-silver-wellness-timeseries.md  23-backfill-pacing.md  24-cli-query-tests-verification.md
src/own_garmin/: __init__.py  cli.py  client.py  constants.py  paths.py  query.py  storage.py  strategies.py
tests/: test_cli.py  test_client.py  test_mfa_handlers.py  test_paths.py  test_query.py  test_query_minio.py  test_silver_activities.py  test_storage.py  test_storage_minio.py
tests/bronze/: test_activities.py  test_activity_details.py  test_fit.py
tests/silver/: test_activities.py  test_activity_metrics.py  (+1 more)
(+16 files in other folders)
